--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
                 android:layout_height="match_parent"
                 android:ems="10"
                 android:singleLine="true"
+                android:imeOptions="actionDone"
                 android:maxLines="1"
                 android:hint="@string/enter_character_name"
                 android:visibility="gone" />
